# sessions

./: .gitignore  LICENSE  README.md  electron-builder.yml  electron.vite.config.ts  index.html  install.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.web.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  api.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity.rs  commands.rs  git.rs  lib.rs  main.rs  repos.rs  sessions.rs  settings.rs  tickets.rs
src/components/Layout/: MainPanel.tsx  Sidebar.tsx
src/components/Sessions/: SessionCard.tsx  SessionDetail.tsx  SessionList.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/common/: Button.tsx
src/hooks/: useRepos.ts  useSessions.ts
src/main/: index.ts
src/main/ipc/: index.ts  repos.ts  sessions.ts  settings.ts  tickets.ts
src/main/services/: ActivityLog.ts  GitService.ts  RepoManager.ts  SessionManager.ts  SettingsStore.ts  TicketService.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  index.css
src/renderer/src/components/Layout/: MainPanel.tsx  Sidebar.tsx
src/renderer/src/components/Sessions/: NewSessionModal.tsx  SessionCard.tsx  SessionDetail.tsx  SessionList.tsx
src/renderer/src/components/Settings/: SettingsPanel.tsx
src/renderer/src/hooks/: useRepos.ts  useSessions.ts
src/renderer/src/store/: appStore.ts
src/renderer/src/types/: assets.d.ts  index.ts  window.d.ts
src/types/: index.ts
(+1 files in other folders)
