[package]
name = "branchless"
version = "0.2.0"
description = "Work on multiple tasks in parallel without branch switching"
authors = ["Darko <darko1989@outlook.com>"]
edition = "2021"

[lib]
name = "branchless_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tokio = { version = "1", features = ["process", "fs", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
urlencoding = "2"
glob = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
